[package]
name = "kook_sdk"
version = "0.1.0"
edition = "2021"
authors = ["KOOK Rust SDK Contributors"]
description = "KOOK (开黑啦) Rust SDK - 官方 API 的非官方 Rust 实现"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/kook.rs"
homepage = "https://github.com/YOUR_USERNAME/kook.rs"
documentation = "https://docs.rs/kook_sdk"
keywords = ["kook", "kaiheila", "bot", "api", "websocket"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[lib]
name = "kook_sdk"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
warp = "0.3"
tokio-tungstenite = "0.17"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
flate2 = "1.0"
bytes = "1.0"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
